--- a/nuseyba-react-portfolio/package.json
+++ b/nuseyba-react-portfolio/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://{NazKena}.github.io",
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -40,6 +41,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "autoprefixer": "^10.4.14",
+    "gh-pages": "^5.0.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
