--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuseyba-react-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://{NazKena}.github.io",
+  "homepage": "https://NazKena.github.io",
   "dependencies": {
     "@heroicons/react": "^2.0.16",
     "@testing-library/jest-dom": "^5.16.5",
